fix: Enable Horizontal Scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -73,12 +73,15 @@ html {
   font-size: var(--fontSize-root);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   color: var(--color-text);
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
 }
 
 footer {
